[package]
name = "async-session"
version = "3.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-session"
documentation = "https://docs.rs/async-session"
description = "Async session support with pluggable middleware"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
  "Yoshua Wuyts <yoshuawuyts@gmail.com>",
  "Jacob Rothstein <hi@jbr.me>"
]

[dependencies]
async-trait = "0.1"
rand = "0.8"
base64 = "0.13"
sha2 = "0.9"
hmac = "0.11"
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
blake3 = "1.0"
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["rc", "derive"] }
time = { version = "0.3", default-features = false, features = ["serde", "std"] }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
